Splitting arm64v8 and x64 builders

--- a/.env
+++ b/.env
@@ -5,6 +5,13 @@
 #
 IWC_INTRANET_VERSION=1.0.0
 DOCKER_ACCT=indiewebconsult
+CPU_TYPE=x64
+CPU_TYPE_DEFAULT=''
+DOCKER_CPU_TAG=$CPU_TYPE/ 
+UN_CPU_TYPE_START=_$CPU_TYPE 
+DASH_CPU_TYPE_START=-$CPU_TYPE 
+UN_CPU_TYPE_END=$CPU_TYPE_ 
+DASH_CPU_TYPE_END=-$CPU_TYPE 
 #
 #
 ## SERVER CONFIGURATIONS FOR GUEST CONTAINERS
