--- a/storage/docker-rsync/Dockerfile
+++ b/storage/docker-rsync/Dockerfile
@@ -1,4 +1,4 @@
-FROM arm64v8/debian:stretch-slim
+FROM debian:stretch-slim
 MAINTAINER Jen McQuade <info@indiewebconsulting>
 
 ENV DEBIAN_FRONTEND noninteractive
