--- a/dns/docker-dnscrypt/Dockerfile
+++ b/dns/docker-dnscrypt/Dockerfile
@@ -1,78 +1,89 @@
-FROM debian:8
-MAINTAINER dnscrypt.io
+FROM jedisct1/alpine-runit:latest
+MAINTAINER Frank Denis
+ENV SERIAL 2
 
-ENV BUILD_DEPENDENCIES \
-    autoconf \
-    bzip2 \
-    curl \
-    gcc \
-    make
+ENV BUILD_DEPS   make gcc musl-dev git libevent-dev expat-dev shadow autoconf file openssl-dev byacc linux-headers
+ENV RUNTIME_DEPS bash util-linux coreutils findutils grep openssl ldns ldns-tools libevent expat libexecinfo coreutils drill ca-certificates
 
 RUN set -x && \
-    apt-get update && \
-    apt-get install -y $BUILD_DEPENDENCIES --no-install-recommends
+    apk --update upgrade && apk add --no-cache $RUNTIME_DEPS $BUILD_DEPS && \
+    update-ca-certificates 2> /dev/null || true
 
-ENV LIBSODIUM_VERSION 1.0.12
-ENV LIBSODIUM_SHA256 b8648f1bb3a54b0251cf4ffa4f0d76ded13977d4fa7517d988f4c902dd8e2f95
-ENV LIBSODIUM_DOWNLOAD_URL https://github.com/jedisct1/libsodium/releases/download/${LIBSODIUM_VERSION}/libsodium-${LIBSODIUM_VERSION}.tar.gz
+ENV UNBOUND_GIT_URL https://github.com/jedisct1/unbound.git
+ENV UNBOUND_GIT_REVISION 7bd08b7a9987a0780892131f8590b6e384194bbc
 
 RUN set -x && \
     mkdir -p /tmp/src && \
     cd /tmp/src && \
-    curl -sSL $LIBSODIUM_DOWNLOAD_URL -o libsodium.tar.gz && \
-    echo "${LIBSODIUM_SHA256} *libsodium.tar.gz" | sha256sum -c - && \
-    tar xzf libsodium.tar.gz && \
-    rm -f libsodium.tar.gz && \
-    cd libsodium-${LIBSODIUM_VERSION} && \
-    ./configure --disable-dependency-tracking --enable-minimal --prefix=/opt/libsodium && \
-    make check && make install && \
-    echo /opt/libsodium/lib > /etc/ld.so.conf.d/libsodium.conf && ldconfig && \
-    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
-
-ENV DNSCRYPT_PROXY_VERSION 1.9.5
-ENV DNSCRYPT_PROXY_SHA256 e89f5b9039979ab392302faf369ef7593155d5ea21580402a75bbc46329d1bb6
-ENV DNSCRYPT_PROXY_DOWNLOAD_URL https://github.com/jedisct1/dnscrypt-proxy/releases/download/${DNSCRYPT_PROXY_VERSION}/dnscrypt-proxy-${DNSCRYPT_PROXY_VERSION}.tar.bz2
-
-RUN set -x && \
-    mkdir -p /tmp/src && \
-    cd /tmp/src && \
-    curl -sSL $DNSCRYPT_PROXY_DOWNLOAD_URL -o dnscrypt-proxy.tar.bz2 && \
-    echo "${DNSCRYPT_PROXY_SHA256} *dnscrypt-proxy.tar.bz2" | sha256sum -c - && \
-    tar xjf dnscrypt-proxy.tar.bz2 && \
-    rm -f dnscrypt-proxy.tar.bz2 && \
-    cd dnscrypt-proxy-${DNSCRYPT_PROXY_VERSION} && \
-    mkdir -p /opt/dnscrypt-proxy/empty && \
-    groupadd _dnscrypt-proxy && \
-    useradd -g _dnscrypt-proxy -s /etc -d /opt/dnscrypt-proxy/empty _dnscrypt-proxy && \
-    env CPPFLAGS=-I/opt/libsodium/include LDFLAGS=-L/opt/libsodium/lib \
-        ./configure --disable-dependency-tracking --prefix=/opt/dnscrypt-proxy --disable-plugins && \
+    git clone "$UNBOUND_GIT_URL" && \
+    cd unbound && \
+    git checkout "$UNBOUND_GIT_REVISION" && \
+    groupadd _unbound && \
+    useradd -g _unbound -s /etc -d /dev/null _unbound && \
+    ./configure --prefix=/opt/unbound --with-pthreads \
+    --with-username=_unbound --with-libevent --enable-event-api && \
     make install && \
-    rm -fr /opt/dnscrypt-proxy/share && \
+    mv /opt/unbound/etc/unbound/unbound.conf /opt/unbound/etc/unbound/unbound.conf.example && \
+    rm -fr /opt/unbound/share/man && \
+    rm -fr /tmp/* /var/tmp/*
+
+ENV LIBSODIUM_GIT_URL https://github.com/jedisct1/libsodium.git
+
+RUN set -x && \
+    mkdir -p /tmp/src && \
+    cd /tmp/src && \
+    git clone "$LIBSODIUM_GIT_URL" && \
+    cd libsodium && \
+    git checkout stable && \
+    env CFLAGS=-Ofast ./configure --disable-dependency-tracking && \
+    make check && make install && \
+    ldconfig /usr/local/lib && \
+    rm -fr /tmp/* /var/tmp/*
+
+ENV DNSCRYPT_WRAPPER_GIT_URL https://github.com/jedisct1/dnscrypt-wrapper.git
+ENV DNSCRYPT_WRAPPER_GIT_BRANCH xchacha-stamps
+
+COPY queue.h /tmp
+
+RUN set -x && \
+    mkdir -p /tmp/src && \
+    cd /tmp/src && \
+    git clone --branch=${DNSCRYPT_WRAPPER_GIT_BRANCH} ${DNSCRYPT_WRAPPER_GIT_URL} && \
+    cd dnscrypt-wrapper && \
+    sed -i 's#<sys/queue.h>#"/tmp/queue.h"#' compat.h && \
+    sed -i 's#HAVE_BACKTRACE#NO_BACKTRACE#' compat.h && \
+    mkdir -p /opt/dnscrypt-wrapper/empty && \
+    groupadd _dnscrypt-wrapper && \
+    useradd -g _dnscrypt-wrapper -s /etc -d /opt/dnscrypt-wrapper/empty _dnscrypt-wrapper && \
+    groupadd _dnscrypt-signer && \
+    useradd -g _dnscrypt-signer -G _dnscrypt-wrapper -s /etc -d /dev/null _dnscrypt-signer && \
+    make configure && \
+    env CFLAGS=-Ofast ./configure --prefix=/opt/dnscrypt-wrapper && \
+    make install && \
     rm -fr /tmp/* /var/tmp/*
 
 RUN set -x && \
-    apt-get purge -y --auto-remove $BUILD_DEPENDENCIES && \
-    apt-get autoremove -y && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+    echo apk del --purge $BUILD_DEPS && \
+    echo rm -rf /tmp/* /var/tmp/* /usr/local/include
 
-ENV LISTEN_ADDR 0.0.0.0:53
-ENV RESOLVER_ADDR 176.56.237.171:443
-ENV PROVIDER_NAME 2.dnscrypt-cert.resolver1.dnscrypt.eu
-ENV PROVIDER_KEY 67C0:0F2C:21C5:5481:45DD:7CB4:6A27:1AF2:EB96:9931:40A3:09B6:2B8D:1653:1185:9C66 
-ENV LOGLEVEL 6
-ENV EDNS_PAYLOAD_SIZE 1252
+RUN mkdir -p \
+    /etc/service/unbound \
+    /etc/service/watchdog
 
-EXPOSE 53/tcp 53/udp
+COPY entrypoint.sh /
 
-CMD /opt/dnscrypt-proxy/sbin/dnscrypt-proxy \
-                   --user=_dnscrypt-proxy \
-                   --local-address=$LISTEN_ADDR \
-                   --provider-name=$PROVIDER_NAME \
-                   --provider-key=$PROVIDER_KEY \
-                   --resolver-address=$RESOLVER_ADDR \
-                   --loglevel=$LOGLEVEL \
-                   --edns-payload-size=$EDNS_PAYLOAD_SIZE \
-                   --ephemeral-keys \
-                   /opt/dnscrypt-proxy/etc/dnscrypt-proxy.conf
+COPY unbound.sh /etc/service/unbound/run
+COPY unbound-check.sh /etc/service/unbound/check
 
+COPY dnscrypt-wrapper.sh /etc/service/dnscrypt-wrapper/run
+
+COPY key-rotation.sh /etc/service/key-rotation/run
+COPY watchdog.sh /etc/service/watchdog/run
+
+VOLUME ["/opt/dnscrypt-wrapper/etc/keys"]
+
+EXPOSE 443/udp 443/tcp
+
+CMD ["/sbin/start_runit"]
+
+ENTRYPOINT ["/entrypoint.sh"]
