--- a/docker-compose-aedan.yml
+++ b/docker-compose-aedan.yml
@@ -14,7 +14,7 @@ services:
         delay: 5s
         max_attempts: 3
         window: 120x
-    container_name: rpoxy
+    container_name: aedan
     restart: unless-stopped
     logging:
       driver: "json-file"
@@ -29,10 +29,6 @@ services:
       - ${HTTP_ACCESS_PORT}:80
       - ${SSL_ACCESS_PORT}:443
       - ${RTMP_P1}:1935
-      - ${SMB_TCP_PORT1}:139
-      - ${SMB_TCP_PORT2}:445
-      - ${SMB_UDP_PORT1}:137
-      - ${SMB_UDP_PORT2}:138
       - ${PLEX_PORT}:32400
       - ${HTTP_SECONDARY}:8080
     volumes:
@@ -51,83 +47,6 @@ services:
     labels:
       com.iwc.stack: "alpine, php, nginx, ffmpg, and rtmp services with support for xdebug, vnc and other passthrough ports"
       com.iwc.description: "Reverse proxy handling of DNS entries"
-      com.iwc.type: "proxy"
-
-  dnsmasqd:
-    env_file:
-      - ./.env
-    image: ${DOCKER_ACCT}/intranet_dnsmasqd:${CPU_TYPE}-v${IWC_INTRANET_VERSION}
-    build:
-      context: ./dns/docker-dnsmasq
-    deploy:
-      mode: replicated
-      replicas: 2
-      restart_policy:
-        condition: on-failure
-        delay: 5s
-        max_attempts: 3
-        window: 120s
-    container_name: dnsmasq
-    network_mode: host
-    cap_add:
-      - NET_ADMIN
-    restart: unless-stopped
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "100M"
-    volumes:
-      - ./config/webproc/webproc-dnsmasq.toml:/config/webproc/webproc-dnsmasq.toml
-      - ./config/global/resolv.conf:/etc/resolv.conf
-      - ./config/dnsmasq/dnsmasq.conf:/etc/dnsmasq.conf
-      - ./config:/intranet/config
-      - ./ops/logs:/var/log
-      - ./storage/ftp:/etc/dnsmasq/ftp
-      - ./util:/intranet/util
-    labels:
-      com.iwc.stack: "alpine"
-      com.iwc.description: "dnsmaq daemon as port 53 manager"
-      com.iwc.type: "dns"
-      com.iwc.context: "NET_ADMIN"
-      com.iwc.network_mode: "host"
-      com.iwc.notes: "This manages port 53 of the host (no port setting)"
-
-  dnscryptd:
-    env_file:
-      - ./.env
-    image: ${DOCKER_ACCT}/intranet_dnscrypt-proxy:${CPU_TYPE}-v${IWC_INTRANET_VERSION}
-    build:
-      context: ./dns/docker-dnscrypt
-    deploy:
-      mode: replicated
-      replicas: 2
-      restart_policy:
-        condition: on-failure
-        max_attempts: 3
-        window: 120s
-    restart: unless-stopped
-    container_name: dnscrypt
-    ports:
-      - ${DNSCRYPT_UDP}:53/udp
-      - ${DNSCRYPT_TCP}:53/tcp
-    depends_on:
-      - dnsmasqd
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "100M"
-    volumes:
-      - ./config/webproc/webproc-dnscrypt.toml:/config/webproc/webproc-dnscrypt.toml
-      - ./config/dnscrypt/dnscrypt.toml:/config/dnscrypt-proxy.toml
-      - ./ops/logs:/var/log
-      - ./config:/intranet/config
-      - ./util:/intranet/util
-    networks:
-      - home
-      - ops
-    labels:
-      com.iwc.stack: "alpine"
-      com.iwc.description: "dnscrypt-proxy for encrypting dnsmasq traffic"
       com.iwc.type: "proxy"
 
 networks:
