Cleanup for incorporating aedan Nginx Docker app for reverse proxy DNS resolution

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ config/aws/*
 ops/data/*
 ops/logs/*
 ops/backups/*
+sites/dev/*
+sites/stg/*
+sites/prod/*
 storage/ftp/.ssh
 storage/public/*
 .ssh
