--- a/config/nginx/conf.d/certbot.conf
+++ b/config/nginx/conf.d/certbot.conf
@@ -1,7 +1,7 @@
 server {
     # Listen on plain old HTTP
-    listen 80 default_server;
-    listen [::]:80 default_server;
+    #listen 80 default_server;
+    #listen [::]:80 default_server;
 
     # Pass this particular URL off to certbot, to authenticate HTTPS certificates
     location '/.well-known/acme-challenge' {
@@ -12,7 +12,7 @@ server {
     }
 
     # Everything else gets shunted over to HTTPS
-    location / {
-        return 301 https://$http_host$request_uri;
-    }
+    #location / {
+        #return 301 https://$http_host$request_uri;
+    #}
 }
